# ritsuko

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  IterateNdDataset_8hpp.html  IterateNdDataset_8hpp__dep__incl.map  IterateNdDataset_8hpp__dep__incl.md5  IterateNdDataset_8hpp__incl.map  IterateNdDataset_8hpp__incl.md5  IterateNdDataset_8hpp_source.html  Numeric1dDatasetStream_8hpp.html  Numeric1dDatasetStream_8hpp__incl.map  Numeric1dDatasetStream_8hpp__incl.md5  Numeric1dDatasetStream_8hpp_source.html  Pointer_8hpp.html  Pointer_8hpp__dep__incl.map  Pointer_8hpp__dep__incl.md5  Pointer_8hpp__incl.map  Pointer_8hpp__incl.md5  Pointer_8hpp_source.html  Stream1dArray_8hpp.html  Stream1dArray_8hpp__dep__incl.map  Stream1dArray_8hpp__dep__incl.md5  Stream1dArray_8hpp__incl.map  Stream1dArray_8hpp__incl.md5  Stream1dArray_8hpp_source.html  Stream1dNumericDataset_8hpp.html  Stream1dNumericDataset_8hpp__dep__incl.map  Stream1dNumericDataset_8hpp__dep__incl.md5  Stream1dNumericDataset_8hpp__incl.map  Stream1dNumericDataset_8hpp__incl.md5  Stream1dNumericDataset_8hpp_source.html  Stream1dStringDataset_8hpp.html  Stream1dStringDataset_8hpp__dep__incl.map  Stream1dStringDataset_8hpp__dep__incl.md5  Stream1dStringDataset_8hpp__incl.map  Stream1dStringDataset_8hpp__incl.md5  Stream1dStringDataset_8hpp_source.html  __strings_8hpp_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  as__numeric__datatype_8hpp.html  (+239 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+23 more)
include/ritsuko/: choose_missing_placeholder.hpp  is_date_time.hpp  r_missing.hpp  r_missing_value.hpp
include/ritsuko/hdf5/: IterateNdDataset.hpp  Numeric1dDatasetStream.hpp  Stream1dNumericDataset.hpp  Stream1dStringDataset.hpp  as_numeric_datatype.hpp  choose_datatype.hpp  exceeds_limit.hpp  forbid_large_integers.hpp  get_1d_length.hpp  get_dataset.hpp  get_group.hpp  get_missing_placeholder_attribute.hpp  get_name.hpp  hdf5.hpp  open.hpp  (+12 more)
tests/: CMakeLists.txt
tests/src/: choose_missing_placeholder.cpp  find_extremes.cpp  is_date_time.cpp  parse_version_string.cpp  r_missing_value.cpp
tests/src/hdf5/: IterateNdDataset.cpp  Numeric1dDatasetStream.cpp  Stream1dNumericDataset.cpp  Stream1dStringDataset.cpp  as_numeric_datatype.cpp  choose_datatype.cpp  exceeds_limit.cpp  forbid_large_integers.cpp  get_1d_length.cpp  get_dataset.cpp  get_dimensions.cpp  get_group.cpp  get_missing_placeholder_attribute.cpp  get_name.cpp  get_scalar_attribute.cpp  is_utf8_string.cpp  iterate_1d_blocks.cpp  load_1d_numeric_dataset.cpp  load_1d_string_dataset.cpp  load_attribute.cpp  load_dataset.cpp  load_scalar_dataset.cpp  load_scalar_string_attribute.cpp  miscellaneous.cpp  missing_placeholder.cpp  open.cpp  open_file.cpp  pick_1d_block_size.cpp  pick_nd_block_dimensions.cpp  utils.h  validate_string.cpp
tests/src/hdf5/vls/: Pointer.cpp  Stream1dArray.cpp  Stream1dDataset.cpp  define_pointer_datatype.cpp  open.cpp  utils.h  validate.cpp
(+7 files in other folders)
